<resources>
    <string name="app_name">GYM KYUBI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">INICIO</string>
    <string name="menu_galeria">GALERÍA</string>
    <string name="menu_calendario">CALENDARIO</string>
    <string name="menu_rutinas">RUTINAS</string>
    <string name="menu_noticias">NOTICIAS</string>
    <string name="menu_foro">FORO</string>
    <string name="registrarse">Registrarme</string>
    <string name="forgotPass">¿Contraseña olvidada?</string>
    <string name="login">INICIAR SESIÓN</string>
    <string name="password">Contraseña</string>
    <string name="username">Usuario</string>
    <string name="signIn">Iniciar sesión</string>
    <string name="registro">Registro</string>
    <string name="registrarme">REGISTRARME</string>
    <string name="afegir">AÑADIR</string>
    <string name="titulo">TÍTULO:</string>
    <string name="tituloej">Ej. KYUBI</string>
    <string name="nueva">NUEVA \nNOTICIA</string>
    <string name="introduirDesc">Ej. Kyubi</string>
    <string name="text">TEXTO:</string>
    <string name="inttext">Ej. Kyubi es...</string>
    <string name="descripcio">DESCRIPCIÓN:</string>
    <string name="borrarnoticia">BORRAR</string>
    <string name="borrarFoto">¿Estás seguro que deseas borrar la noticia?</string>
    <string name="borrar">Sí</string>
    <string name="cancelar">Cancelar</string>
    <string name="porkyubi">Por GYM KYUBI</string>
    <string name="Benv">"Bienvenido/a "</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="iniciarSesion">Iniciar sesión/Registro</string>
    <string name="calendarday">1</string>
    <string name="hola">hola</string>
    <string name="snlcontdesc">bhug</string>
</resources>