<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondologin"
    tools:context=".Login">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginSignIn"
        android:layout_marginTop="@dimen/marginSignIn"
        android:layout_marginEnd="@dimen/marginSignIn"
        android:layout_marginBottom="@dimen/marginSignIn"
        android:gravity="center"
        android:text="@string/signIn"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeSignIn"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_marginStart="@dimen/marginUsername"
        android:layout_marginTop="@dimen/marginUsername"
        android:layout_marginEnd="@dimen/marginUsername"
        android:layout_marginBottom="@dimen/marginUsername"
        android:background="@color/translucid"
        android:drawableLeft="@drawable/ic_baseline_username"
        android:drawablePadding="@dimen/dPaddingUsername"
        android:hint="@string/username"
        android:padding="@dimen/paddingUsername"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@id/username"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="@dimen/marginUsername"
        android:padding="@dimen/paddingUsername"
        android:background="@color/translucid"
        android:drawableLeft="@drawable/ic_baseline_lock"
        android:drawablePadding="@dimen/dPaddingUsername"
        android:inputType="textPassword"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginbtn"
        android:layout_below="@id/password"
        android:text="@string/login"
        android:backgroundTint="@color/design_default_color_on_secondary"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/marginLogin"/>

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_below="@+id/loginbtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="83dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="273dp"
        android:text="@string/forgotPass"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="26dp"
        android:background="@color/translucid"
        android:text="@string/registrarse"
        android:textColor="@color/black" />


</RelativeLayout>